--- a/src/main/resources/com/agendastudy/view/cancelar-aula-confirmacao.fxml
+++ b/src/main/resources/com/agendastudy/view/cancelar-aula-confirmacao.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.agendastudy.controller.CancelarAulaConfirmacaoController"
-            stylesheets="@cancelar-aula-confirmacao.css"
+            stylesheets="@../styles/cancelar-aula-confirmacao.css"
             prefWidth="400" prefHeight="700"
             styleClass="root">
             
