--- a/src/main/resources/com/agendastudy/view/cancelar-aula.fxml
+++ b/src/main/resources/com/agendastudy/view/cancelar-aula.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.agendastudy.controller.CancelarAulaController"
-            stylesheets="@cancelar_aula.css"
-            prefWidth="400" prefHeight="700">
+<AnchorPane prefHeight="700" prefWidth="400" stylesheets="@../styles/cancelar-aula.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/25" fx:controller="com.agendastudy.controller.CancelarAulaController">
 
-    <VBox spacing="20" alignment="TOP_CENTER" layoutX="20" layoutY="40" prefWidth="360">
+    <VBox alignment="TOP_CENTER" layoutX="20" layoutY="40" prefWidth="360" spacing="20">
 
         <!-- Cabeçalho -->
         <HBox alignment="CENTER_LEFT" spacing="10">
@@ -21,32 +19,33 @@
                     <Image url="@icons/back.png" />
                 </image>
             </ImageView>
-            <Label text="AgendaStudy" styleClass="titulo-app"/>
+         <ImageView fitHeight="50.0" fitWidth="200.0">
+            <image>
+               <Image url="@../image/logo.png" />
+            </image>
+         </ImageView>
         </HBox>
 
         <!-- Informações da aula -->
         <VBox spacing="10" styleClass="card">
 
-            <Label fx:id="labelDisciplina" text="Disciplina" styleClass="titulo-disciplina"/>
+            <Label fx:id="labelDisciplina" styleClass="titulo-disciplina" text="Disciplina" />
 
-            <Label fx:id="labelProfessor" text="Prof. nome" styleClass="texto-info"/>
-            <Label fx:id="labelDataHora" text="Data - horário" styleClass="texto-info"/>
-            <Label fx:id="labelDuracao" text="Duração da aula" styleClass="texto-info"/>
-            <Label fx:id="labelLocal" text="Local / Endereço" styleClass="texto-info"/>
+            <Label fx:id="labelProfessor" styleClass="texto-info" text="Prof. nome" />
+            <Label fx:id="labelDataHora" styleClass="texto-info" text="Data - horário" />
+            <Label fx:id="labelDuracao" styleClass="texto-info" text="Duração da aula" />
+            <Label fx:id="labelLocal" styleClass="texto-info" text="Local / Endereço" />
 
         </VBox>
 
         <!-- Botões -->
-        <VBox spacing="15" alignment="CENTER">
+        <VBox alignment="CENTER" spacing="15">
 
-            <Button text="Reagendar aula" styleClass="botao-secundario"/>
+            <Button styleClass="botao-secundario" text="Reagendar aula" />
 
-            <Label text="Menos de 24h, cancelamento sem multa"
-                   style="-fx-font-size: 11px; -fx-text-fill: #444;" />
+            <Label style="-fx-font-size: 11px; -fx-text-fill: #444;" text="Menos de 24h, cancelamento sem multa" />
 
-            <Button text="Cancelar aula"
-                    onAction="#handleCancelarAula"
-                    styleClass="botao-cancelar"/>
+            <Button onAction="#handleCancelarAula" styleClass="botao-cancelar" text="Cancelar aula" />
 
         </VBox>
 
