Adequa .fxml de AvalicaoModal e ConfirmacaoAvaliacao e adiciona .css de cada

--- a/src/main/resources/com/agendastudy/view/AvaliacaoModal.fxml
+++ b/src/main/resources/com/agendastudy/view/AvaliacaoModal.fxml
@@ -3,74 +3,103 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.agendastudy.controller.AvaliacaoModalController"
             prefWidth="350" prefHeight="520"
-            style="-fx-background-color: rgba(0,0,0,0.5);">
+            styleClass="root-modal"
+            stylesheets="@../styles/avaliacao_modal.css"> <ImageView fx:id="btnVoltar"
+                                                                           fitWidth="24" fitHeight="24"
+                                                                           pickOnBounds="true"
+                                                                           style="-fx-cursor: hand;"
+                                                                           AnchorPane.topAnchor="50.0"
+                                                                           AnchorPane.leftAnchor="30.0">
+    <image>
+        <Image url="@/com/agendastudy/image/back_icon.png"/>
+    </image>
+</ImageView>
 
-    <!-- Card central -->
-    <VBox spacing="20" alignment="TOP_CENTER"
-          layoutX="20" layoutY="40"
+    <VBox spacing="15" alignment="TOP_CENTER"
           prefWidth="310" prefHeight="440"
-          style="-fx-background-radius: 20; -fx-background-color: white; -fx-padding: 20;">
+          styleClass="card-avaliacao"
+          AnchorPane.topAnchor="40.0"
+          AnchorPane.bottomAnchor="40.0"
+          AnchorPane.leftAnchor="20.0"
+          AnchorPane.rightAnchor="20.0">
 
-        <!-- Botão voltar -->
-        <ImageView fx:id="btnVoltar"
-                   fitWidth="24" fitHeight="24"
-                   pickOnBounds="true"
-                   style="-fx-cursor: hand;"
-                   AnchorPane.leftAnchor="10">
-            <image>
-                <Image url="@/com/agendastudy/image/back_icon.png"/>
-            </image>
-        </ImageView>
+        <Region prefHeight="0" VBox.vgrow="NEVER"/>
 
-        <!-- Ícone principal -->
         <ImageView fitWidth="70" fitHeight="70">
             <image>
                 <Image url="@/com/agendastudy/image/logo_vazio.png"/>
             </image>
         </ImageView>
 
-        <!-- Títulos -->
-        <Label text="Aula Finalizada"
-               style="-fx-font-size: 22; -fx-font-weight: bold; -fx-text-fill: #2E7D32;"/>
+        <Label text="Aula Finalizada" styleClass="titulo-finalizada">
+            <font><Font size="32" name="System Bold" /></font>
+        </Label>
 
-        <Label text="Avalie como foi a sua aula"
-               wrapText="true"
-               style="-fx-font-size: 16; -fx-text-fill: #1A237E; -fx-font-weight: bold;"
-               alignment="CENTER"/>
+        <Label text="Avalie como foi"
+               alignment="CENTER"
+               styleClass="titulo-avaliacao">
+            <font><Font size="32" name="System Bold" /></font>
+            <VBox.margin>
+                <Insets top="-5" /> </VBox.margin>
+        </Label>
 
-        <!-- Estrelas -->
-        <HBox spacing="10" alignment="CENTER">
-            <ImageView fx:id="star1" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
-            <ImageView fx:id="star2" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
-            <ImageView fx:id="star3" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
-            <ImageView fx:id="star4" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
-            <ImageView fx:id="star5" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
-        </HBox>
+        <Label text="a sua aula"
+               alignment="CENTER"
+               styleClass="titulo-avaliacao">
+            <font><Font size="32" name="System Bold" /></font>
+            <VBox.margin>
+                <Insets top="-25" /> </VBox.margin>
+        </Label>
 
-        <!-- Comentário -->
-        <TextArea fx:id="fieldComentario"
-                  promptText="Adicione um comentário (opcional)"
-                  prefHeight="120" wrapText="true"
-                  style="-fx-background-radius: 10;"/>
+        <Region prefHeight="10" VBox.vgrow="NEVER"/>
 
-        <!-- Botão Enviar -->
+        <StackPane alignment="CENTER" prefWidth="274.27" prefHeight="86">
+            <Rectangle width="274.27" height="86" arcWidth="30" arcHeight="30" styleClass="fundo-azul-medio"/>
+            <HBox spacing="10" alignment="CENTER">
+                <ImageView fx:id="star1" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
+                <ImageView fx:id="star2" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
+                <ImageView fx:id="star3" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
+                <ImageView fx:id="star4" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
+                <ImageView fx:id="star5" fitWidth="32" fitHeight="32" pickOnBounds="true" style="-fx-cursor: hand;"/>
+            </HBox>
+        </StackPane>
+
+        <StackPane prefWidth="275.22" prefHeight="134" VBox.vgrow="ALWAYS">
+            <Rectangle width="275.22" height="134" arcWidth="30" arcHeight="30" styleClass="fundo-azul-medio" StackPane.alignment="CENTER"/>
+
+            <Rectangle width="235.36" height="97" arcWidth="30" arcHeight="30" styleClass="fundo-azul-escuro" StackPane.alignment="BOTTOM_CENTER">
+                <StackPane.margin><Insets bottom="10"/></StackPane.margin>
+            </Rectangle>
+
+            <Text text="Comentário" styleClass="texto-comentario-label" StackPane.alignment="TOP_LEFT">
+                <StackPane.margin><Insets top="15" left="25"/></StackPane.margin>
+            </Text>
+
+            <TextArea fx:id="fieldComentario"
+                      promptText="Adicione um comentário (opcional)"
+                      wrapText="true"
+                      prefWidth="235.36" prefHeight="97"
+                      StackPane.alignment="BOTTOM_CENTER"
+                      styleClass="text-area-comentario">
+                <StackPane.margin><Insets bottom="10"/></StackPane.margin>
+            </TextArea>
+        </StackPane>
+
+        <Region VBox.vgrow="ALWAYS"/>
+
         <Button fx:id="btnEnviar"
                 text="Enviar avaliação"
-                prefWidth="250" prefHeight="45"
+                prefWidth="220" prefHeight="70"
                 onAction="#enviarAvaliacao"
-                disable="true"
-                style="
-                    -fx-background-color: #2E7D32;
-                    -fx-text-fill: white;
-                    -fx-font-size: 16;
-                    -fx-background-radius: 25;
-                "/>
-
+                disable="true"/>
     </VBox>
 
 </AnchorPane>
